--- a/admin/css.css
+++ b/admin/css.css
@@ -1,8 +1,193 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@300;400;700&family=Noto+Sans&family=Poppins:wght@100;400&family=Roboto+Mono:wght@300&family=Roboto:ital,wght@0,300;0,400;1,500&family=Ubuntu&display=swap');
+*,
+::after,
+::before{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+body{
+    font-family: 'Poppins';
+}
+main{
+    padding: 20px;
+}
+footer{
+    padding: 10px;
+    background-color: #030303;
+    position: fixed;
+    bottom: 0;
+    color: #e9e6e6;
+    width: 100%;
+    text-align: center;
+}
+.nav{
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #030303;
+}
+.nav-title{
+    font-size: 1.5rem;
+    color: #fff;
+}
+.btn-profile{
+    all: unset;
+    cursor: pointer;
+}
+.profile-img img{
+    width:30px;
+    border-radius: 50%;
+}
 .profile {
     display: block;
     text-align: end;
 }
 
+.views{
+    display: flex;
+    justify-content: space-between;
+}
+.addBookCard{
+    position:relative;
+}
+.addBook{
+    width:50%;
+    left: 30%;
+    right: 50%;
+    top:30%;
+    background-color: #e9e6e6;
+    border-radius: .8rem;
+    position: absolute;
+    visibility: hidden;
+}
+.card-top{
+    position: relative;
+}
+
+.btn-cancel{
+    border: 0;
+    outline: none;
+    background-color: #e9e6e6;
+    cursor: pointer;
+    color: #ff0000;
+    position: absolute;
+    top:.6em;
+    right: .2em;
+}
+.minimise{
+    font-size: 1.2em;
+}
+.addBook h3{
+    padding: 1em;
+    text-align: center;
+}
+.form{
+    margin: auto;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    padding: .8rem;
+}
+.form input{
+    margin-bottom: .8em;
+    height: 2.2em;
+    padding-left: .4em;
+    border: 0;
+    outline: none;
+    background-color: #e9e6e6;
+    border-bottom: 2px solid #fff;
+    color: #030303;
+}
+.form textarea{
+    margin-bottom: .8em;
+    height: 2.2em;
+    padding-left: .4em;
+    border: 0;
+    outline: none;
+    background-color: #e9e6e6;
+    border-bottom: 2px solid #fff;
+    resize: none;
+    color: #030303;
+}
+
+.form button{
+    outline: none;
+    background-color: #030303;
+    color: #fff;
+    border: 0;
+    padding: .8em 0;
+    font-size: .8rem;
+    cursor: pointer;
+    margin-bottom: 1.2em;
+}
+.book-btn{
+    outline: none;
+    background-color: #030303;
+    color: #fff;
+    border: 0;
+    padding: .8em 1.8em;
+    font-size: .8rem;
+    cursor: pointer;
+    margin-bottom: 1.2em;
+}
+
+.showCard{
+    visibility: visible;
+}
+.users{
+    width: 35%;
+    margin: 0 .4rem;
+    background-color: #030303;
+    color: #fff;
+}
+.views{
+    display: flex;
+}
+.books{
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    background-color: #e9e6e6;
+}
+
+table{
+    border-collapse: collapse;
+    width: 100%;
+}
+table, td, th {  
+    text-align: left;
+  }
+
+.books td, tr{
+    padding-left: .3em;
+}
+.edit{
+    color:#fff;
+    padding: 0.2em .8em;
+    background-color: #008000;
+    border: none;
+    outline: 0;
+    cursor: pointer;
+}
+.delete{
+    cursor: pointer;
+    color:#fff;
+    padding: 0.2em .8em;
+    background-color: #ff0000;
+    border: none;
+    outline: 0;
+}
+.users th, td{
+    padding: .8em;
+}
+.user-tbody{
+    text-align: left;
+}
+.user-theader{
+    text-align: left;
+    padding-right: 2em;
+}
 .container{
   padding-left: 50px;
   padding-top: 50px;
