--- a/home/css/style.css
+++ b/home/css/style.css
@@ -15,6 +15,7 @@ a{
 li{
     list-style: none;
 }
+
 .logo span{
     color: #6e6e6e;
 }
@@ -26,6 +27,42 @@ li{
     background-color: #f1f1f1;
     box-shadow: 0px -10px 15px #6e6e6e, 0px -22px 15px #6e6e6e;
     z-index: 15;
+}
+.nav-elements{
+    position: relative;
+}
+.search{
+    position: absolute;
+    right: 10px;
+    top: 0;
+}
+.nav-elements input{
+    background-color: #f1f1f1;
+    outline: none;
+    font-size: 18px;
+    border-bottom: 2px solid #f1f1f1;
+    border: 2px solid #ffffff;
+    border-radius: 4px 0 0 4px;
+    background-color: #ffffff;
+    color: #010101;
+    padding-left: 3px;
+    height: 25px;
+}
+
+.nav-elements button{
+    padding: 5px 15px;
+    border: none;
+    background-color: #010101;
+    border-radius: 0 4px 4px 0;
+    color: #ffffff;
+    cursor: pointer;
+}
+form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: -5px;
 }
 .nav-elements ul{
     display: flex;
@@ -73,6 +110,15 @@ img{
     flex-wrap: wrap;
     gap: 20px;
 }
+
+.all-books{
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
 .book-card img{
     border-radius: 8px 8px 0 0;
 }
@@ -101,6 +147,20 @@ img{
     justify-content: space-between;
     padding: 10px;
 }
+.single-book-card img{
+    width: 300px;
+}
+.single-book-card{
+    width: 75%;
+    display: flex;
+    gap: 20px;
+    background-color: #ffefd5;
+    box-shadow: 0 2px 10px #6e6e6e;
+}
+.dits .description{
+    padding: 10px 0;
+    margin-left: 10px;
+}
 footer{
     background-color: #ffefd5;
     text-align: center;
@@ -111,6 +171,14 @@ footer{
     padding: 10px;
 }
 
+.footer{
+    position: relative;
+}
+
+.copy{
+    position: absolute;
+    bottom: 0;
+}
 .btns{
     display: flex;
     justify-content: center;
