--- a/admin/style.css
+++ b/admin/style.css
@@ -55,6 +55,7 @@ footer{
     left: 30%;
     right: 50%;
     top:30%;
+    /* bottom: 2%; */
     background-color: #e9e6e6;
     border-radius: .8rem;
     position: absolute;
@@ -71,22 +72,22 @@ footer{
     cursor: pointer;
     color: #ff0000;
     position: absolute;
-    top:.6em;
+    top:-.8em;
     right: .2em;
 }
 .minimise{
     font-size: 1.2em;
 }
 .addBook h3{
-    padding: 1em;
+    padding: 0 1em;
     text-align: center;
 }
 .form{
-    margin: auto;
+    margin: 0 auto;
     width: 80%;
     display: flex;
     flex-direction: column;
-    padding: .8rem;
+    padding: 0 .8rem .8rem .8rem;
 }
 .form input{
     margin-bottom: .8em;
@@ -217,4 +218,4 @@ table, td, th {
 .footer{
     text-align: center;
 }
- */
+
