--- a/login/style.css
+++ b/login/style.css
@@ -21,6 +21,8 @@ background:transparent;
 
 body {
 line-height:1;
+height: 100vh;
+background-image: url("images/3.jpg");
 }
 
 article,aside,details,figcaption,figure,
@@ -108,6 +110,9 @@ header
 	background-color: black;
 	padding: 10px;
 }
+img{
+	width: 100%;
+}
 section
 {
 	height: 550px;
@@ -153,7 +158,7 @@ section .sec_img
 {
 	height: 550px;
 	margin-top: 0px;
-	background-image: url("images/background.png");
+	/* background-image: url("images/background.png"); */
 }
 .box
 {
@@ -171,7 +176,6 @@ section .sec_img
 {
 	height: 650px;
 	margin-top: 0px;
-	background-image: url("images/3.jpg");
 }
 .box1
 {
