--- a/home/css/style.css
+++ b/home/css/style.css
@@ -49,7 +49,7 @@ form {
     right: 10px;
     top: 0;
 }
-button[type="submit"] {
+.show button[type="submit"] {
   text-indent: -999px;
   overflow: hidden;
   width: 40px;
@@ -261,7 +261,12 @@ footer{
 .user-profile{
     visibility: hidden;
 }
-
+.download{
+    border: none;
+    outline: none;
+    background-color: #ffefd5;
+    cursor: pointer;
+}
 
 @media screen and (max-width:600px){
     body{
