--- a/home/css/style.css
+++ b/home/css/style.css
@@ -27,6 +27,7 @@ li{
     background-color: #f1f1f1;
     box-shadow: 0px -10px 15px #6e6e6e, 0px -22px 15px #6e6e6e;
     z-index: 15;
+    position: relative;
 }
 .nav-elements{
     position: relative;
@@ -82,6 +83,25 @@ input[type="search"]:focus {
     color: #010101;
     padding-left: 3px;
     height: 25px;
+}
+
+.menus{
+    position: absolute;
+    top: 65px;
+    right: 300px;
+}
+.menus ul{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.menus ul a:hover{
+    background-color: #010101;
+    padding: 5px;
+    color: #f1f1f1;
+}
+.hidden{
+    visibility: hidden;
 }
 .download-form button{
     border: none;
