--- a/style.css
+++ b/style.css
@@ -236,3 +236,14 @@ input
 .pass_match{
 	color: red;
 }
+
+.show-pass{
+	margin: auto 0 15px 0;
+}
+
+#check{
+	padding: 0;
+	margin: 0;
+	height: 15px;
+	width: 15px;
+}
